redirect http to https

--- a/bitnami.conf
+++ b/bitnami.conf
@@ -7,7 +7,8 @@
 
 <VirtualHost _default_:8080>
   DocumentRoot "/Users/jchardin/my_mamp/apache2/htdocs/camagru/public"
-  Redirect permanent / https://localhost:8443
+RedirectMatch /(!phpmyadmin/) https://localhost:8443
+RedirectMatch /(.*)$ https://localhost:8443/$1
 
   <Directory "/Users/jchardin/my_mamp/apache2/htdocs/camagru/public">
     <IfVersion < 2.3 >
